<?xml version="1.0"?>
<package format="2">
  <name>localization</name>
  <version>1.0</version>
  <description>A localization package for the Delft Scaled Vehicle</description>

  <author email="kostaskonkk@gmail.com">Kostas Konstantinidis</author>
  <maintainer email="kostaskonkk@gmail.com">Kostas Konstantinidis</maintainer>
  <license>GPLv3</license>

  <depend>roscpp</depend> 
  <depend>std_msgs</depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>hector_mapping</exec_depend>
  <depend>barc</depend>

</package>
